# AmazonAtHome

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  README.md  docker-compose.yml  start.sh
git-daemon/: Dockerfile  entrypoint.sh
logistics_interfaces/: CMakeLists.txt  package.xml
logistics_interfaces/action/: LogisticsTask.action  MoveToWaypoint.action
logistics_interfaces/msg/: ChargerState.msg  ChargerStatus.msg  RobotStatus.msg  SlotStatus.msg  TaskStatus.msg  WarehouseState.msg
logistics_interfaces/srv/: AcquireWaypoint.srv  ChargerControl.srv  ReleaseWaypoint.srv  SetSlotOccupancy.srv  SubmitTask.srv
logistics_robot_sim/: package.xml  setup.cfg  setup.py
logistics_robot_sim/logistics_robot_sim/: hector_driver.py  real_robot_driver.py  robot_sim.py
logistics_server/: package.xml  setup.cfg  setup.py
logistics_server/config/: chargers.yaml  opensauce_field_map.yaml  robots.yaml  warehouse_map.yaml
logistics_server/launch/: logistics.launch.py
logistics_server/logistics_server/: charger_driver.py  charger_manager.py  esp_charger_driver.py  nav_server.py  sim_charger_driver.py  task_client.py  traffic_controller.py
logistics_task_manager/: package.xml  setup.cfg  setup.py
logistics_task_manager/logistics_task_manager/: task_manager_node.py
logistics_warehouse/: package.xml  setup.cfg  setup.py
logistics_warehouse/logistics_warehouse/: warehouse_state_node.py
logistics_web/: package.xml  setup.cfg  setup.py
logistics_web/logistics_web/: web_node.py
logistics_web/static/: index.html  map_editor.html  map_view.html
