<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>logistics_robot_sim</name>
  <version>0.0.1</version>
  <description>Simulated robot for the warehouse logistics system</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>logistics_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
